# urban-model-platform

./: .bumpmyversion.chart.toml  .bumpmyversion.toml  .copier-answers.yml  .dockerignore  .env.example  .env.prod.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  REF-Refactoring-status.md  docker-compose-build.yaml  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-prod.yaml  docker-compose.yaml  docker-compose.yml  environment.yaml  keycloak-example-conf.json  providers.yaml  providers.yaml.example  providers.yml.example  pyproject.toml  style.css  template.html
.githooks/: pre-push
.github/workflows/: deploy-docs.yaml  deploy-docs.yml  on-chart-release.yaml  on-release.yaml
api/: Dockerfile  main.py  requirements.txt
api/configs/: config.py  dev_environment.example  prod_environment.example  providers.yml.example
api/routes/: jobs.py  processes.py
api/scripts/: entrypoint.sh
api/src/: db_handler.py  errors.py  geoserver.py  job.py  job_status.py  jobs.py  process.py  processes.py
assets/: README.md
charts/: .bumpmyversion.toml  .bumpversion.toml
charts/urban-model-platform/: Chart.yaml  values.yaml
charts/urban-model-platform/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  configmap-job-settings.yaml  configmap-providers.yaml  configmap-settings-job.yaml  configmap-settings.yaml  deployment.yaml  hpa.yaml  httproute-tls.yaml  httproute.yaml  issuer-prod.yaml  issuer-staging.yaml  service.yaml  (+9 more)
data/: .gitignore
docs/: _config .yml  _config.yml  _toc.yml  references.bib  test-coverage-report.md
docs/content/: index.md
examples/: README.md
geoserver/configs/: geoserver.example  postgis.example
helm_charts/: Chart.yaml  values.yaml
helm_charts/templates/: NOTES.txt  _helpers.tpl  configmap-providers.yaml  configmap-settings.yaml  deployment.yaml  gateway.yaml
migrations/: alembic.ini  env.py
migrations/versions/: 1.0.0_add_user.py  1.0.10_add_share_tables.py  1.0.11_add_hash.py  1.0.1_add_process_title_and_name.py  1.0.2_add_ensembles.py  1.0.3_extend_ensembles.py  1.0.4_remove_sampling_settings_from_ensemble.py  1.0.5_add_ensemble_job_link.py  1.0.5_refactor_jobs.py  1.0.6_add_postgis_extension.py  1.0.7_add_version.py  1.0.8_drop_ensemble_id.py  1.0.9_create_job_comments.py  e4478f461de1_create_jobs_table_initial.py
nginx/: default-local.conf  default.conf
old_src/: app.py
old_src/ump/: __init__.py  config.py  errors.py  main.py
reports/: README.md
scratch/: README.md
scripts/: entrypoint.sh
src/ump/: __init__.py  app_factory.py  config.py  errors.py  main.py  utils.py
tests/: test_aiohttp_adapter.py  test_fastapi_execute_async.py  test_fastapi_execute_e2e.py  test_fastapi_execution.py  test_feature_ii.py  test_job_manager_feature_iii.py  test_job_manager_polling_retry.py  test_observers.py  test_process_manager.py  test_status_derivation_strategies.py
(+116 files in other folders)
